[package]
name = "dotmatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
defmt-rtt = "0.4.0"
# panic-probe = "0.3.1"
embassy-rp = { version = "0.1.0", features = ["defmt", "time-driver"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-sync = "0.5.0"
embassy-usb = "0.1.0"
embassy-futures = "0.1.1"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

